--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
   "private": true,
-  "type": "module",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^30.0.5",
+    "jest": "^30.0.5",
     "vite": "^5.4.19",
     "vite-plugin-ruby": "^5.1.1"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.2"
   }
 }
